<resources>
    <string name="app_name">CineBok</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btn_book_h">Book Now</string>
    <string name="btn_book_vip_h">Book VIP Cinema</string>
    <string name="tv_vip_home">Want to experience VIP Cinema?</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_booking_history">Booking HIstory</string>
    <string name="menu_signout">Logout</string>


    <!--    T     -->
    <string name="btn_book_home_t">Book now</string>
    <string name="tv_opt_vip_t">Want to experience VIP cinema?</string>
    <string name="btn_vip_book_home_t">Book VIP cinema</string>
    <string name="tv_home_prob_t">For more information contact us.</string>
    <string name="title_activity_vip_movies_t">ScrollingActivity</string>
    <string name="tv_fname_t">First Name</string>
    <string name="tv_lname_t">Last Name</string>
    <string name="NIC_t">NIC</string>
    <string name="tv_phone_t">Mobile No.</string>
    <string name="tv_email_t">Email</string>
    <string name="tv_ticket_tot_t">Tickets</string>
    <string name="tv_snack_tot_t">Other</string>
    <string name="tv_tot_t">Total</string>
    <string name="btn_confirm_t">Confirm</string>
    <string name="tv_no_tickets_t">No of Tickets</string>
    <string name="tv_snack_opt_t">Need popcorn and coke?</string>
    <string name="btn_yes_t">Yes</string>
    <string name="btn_opt1_t">View Item List</string>
    <string name="btn_opt2_t">Add New Item</string>
    <string name="btn_add_t">Add</string>
    <string name="btn_update_list_t">Update</string>
    <string name="btn_delete_record_t">Delete</string>
    <string name="tv_image_t">Image</string>
    <string name="tv_name_item_t">Name</string>
    <string name="tv_size_t">Size</string>
    <string name="tv_price_t">Price</string>
    <string name="tv_available_t">Availability</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_hall_management">Hall Management</string>
    <string name="btn_movie_management">Movie Management</string>
    <string name="btn_schedule_management">Schedule Management</string>
    <string name="btn_snack_management">Snack and Beverage Management</string>
    <string name="action_admin">Admin</string>



    <!--Hall Management Strings-->

   <!-- <string name="app_name">CineApp</string>-->
    <string name="hType1">VIP</string>
    <string name="hType2">NON VIP Hall</string>
    <string name="h1">Araliya Hall</string>
    <string name="h2">Lake Side Hall</string>
    <string name="h3">Nayomi Hall</string>
    <string name="h4">Adwi Hall</string>
    <string name="textT1">8.30-10.30</string>
    <string name="textT2">10.30-12.30</string>
    <string name="textT3">18.30-20.30</string>
    <string name="btn1">Save And Next</string>
    <string name="txtV1">Select Your Hall</string>
    <string name="txtSeV1">Your Hall Details</string>
    <string name="txtSeV2">Your ID</string>
    <string name="txtSev3">Hall Name</string>
    <string name="txtSeV4">Hall Type</string>
    <string name="txtSeV5">Total AAmount Of Payable</string>
    <string name="btnSe1">Delete My Data</string>
    <string name="btnSe2">Pay</string>
    <string name="txtVTh1">Total Amount Of Payment</string>
    <string name="txtThV2">Pay With</string>
    <string name="txtThV3">Credit Debit Card</string>
    <string name="rdbtn1">Visa</string>
    <string name="rdbtn2">Master</string>
    <string name="rdbtn3">Amex</string>
    <string name="txtThV4">Mobile Wallet</string>
    <string name="rdbtn4">Ez Cash</string>
    <string name="rdbtn5">Mcash</string>
    <string name="rdbtn6">genie</string>
    <string name="txtThV5">Internet Banking</string>
    <string name="rdbtn7">Sampath Vishwa</string>
    <string name="btnTh1">Next</string>
    <string name="txtSeV6">Update</string>
    <string name="txtSeV7">Update</string>
    <string name="txtFV1">Total Amount Of Payment</string>
    <string name="txtFV2" />
    <string name="txtFV3">Card Details</string>
    <string name="txtIn1">Name On Card</string>
    <string name="txtIn2">Card Number</string>
    <string name="txtInNum">CVV</string>
    <string name="txtFV4">CVV</string>
    <string name="txtl3">CVV</string>
    <string name="txtl4">Card Expiry(MM/YY)</string>
    <string name="btnF1">Pay</string>
    <string name="btnFif1">View My Hall Details</string>
    <string name="btnFif2">Return To Home</string>
    <string name="btnFif3">Update My Data</string>
    <string name="btnFif4">Delete My Data</string>

    <string name="btn_back_t">Back to movie list</string>
    <string name="itemCount">0</string>

    <!---schedule-->

    <string name="txtv1_p">Movie-Name</string>
    <string name="ET1_p">Enter movie name</string>
    <string name="txtv2_p">Hall-Name</string>
    <string name="ET2_p">Enter Halll  name</string>
    <string name="txtv3_p">Time</string>
    <string name="ET3_p">Available Time</string>
    <string name="txtv4_p">Duration</string>
    <string name="ET4_p">Movie Duration</string>
    <string name="btn1_p">Add</string>

</resources>