<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="gotosnackmanage"
    tools:context=".AdminHomeActivity">

    <Button
        android:id="@+id/btn_hall_management"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_hall_management"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_movie_management"
        app:layout_constraintEnd_toEndOf="@+id/btn_movie_management"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_movie_management"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_schedule_management"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="schedulemanage"
        android:text="@string/btn_schedule_management"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_snack_management"
        app:layout_constraintEnd_toEndOf="@+id/btn_snack_management"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_snack_management"
        app:layout_constraintTop_toBottomOf="@+id/btn_movie_management" />

    <Button
        android:id="@+id/btn_snack_management"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:onClick="gotosnackmanage"
        android:text="@string/btn_snack_management"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_schedule_management" />

    <Button
        android:id="@+id/btn_movie_management"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_movie_management"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_schedule_management"
        app:layout_constraintEnd_toEndOf="@+id/btn_schedule_management"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_schedule_management"
        app:layout_constraintTop_toBottomOf="@+id/btn_hall_management" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:text="Management"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>